@@ -1,6 +1,9 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Fix internal issue #742: Add tick storage in index meta payload after 
+  truncate operation
+
 * Fixed: During a move-shard job which moves the leader there is a
   situation in which the old owner of a shard can reclaim ownership
   (after having resigned already), with a small race where it allows to
